packages/@winglang/tree-sitter-wing/grammar.js
    source: ($) => repeat($._statement),
    block: ($) =>
      choice(braced(optional(repeat($._statement))), $.AUTOMATIC_BLOCK),
    _semicolon: ($) => choice(";", $.AUTOMATIC_SEMICOLON),
    comment: ($) =>
      token(
        choice(
          seq(/\/\/[^\/]/, /.*/),
          seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/")
        )
      ),

    doc: ($) => seq("///", field("content", $.doc_content)),
    doc_content: ($) => /.*/,

    // Identifiers
    reference: ($) =>
      choice(
        $.nested_identifier,
        $._reference_identifier,
        $.structured_access_expression
      ),

    identifier: ($) => /([A-Za-z_$][A-Za-z_$0-9]*|[A-Z][A-Z0-9_]*)/,
    _type_identifier: ($) => alias($.identifier, $.type_identifier),
    _member_identifier: ($) => alias($.identifier, $.member_identifier),
    _reference_identifier: ($) => alias($.identifier, $.reference_identifier),

    custom_type: ($) =>
      prec.right(
        seq(
          field("object", $._type_identifier),
          // While the final "fields" identifier is optional in this grammar, upstream parsing will fail if it is not present
          repeat(seq(".", optional(field("fields", $._type_identifier))))
        )
      ),

    nested_identifier: ($) =>
      prec(
        PREC.MEMBER,
        seq(
          field(
            "object",
            choice(
              $.expression,
              // This is required because of ambiguity with using Json keyword for both instantiation of Json
              // and Identifier for static methods.
              $.json_container_type
            )
          ),
          field("accessor_type", $.accessor),
          // While the "property" identifier is optional in this grammar, upstream parsing will fail if it is not present
          optional(field("property", $._member_identifier))
        )
      ),

    accessor: ($) => choice(".", "?."),

    phase_specifier: ($) => choice("unphased", "inflight"),

    _statement: ($) =>
      choice(
        $.empty_statement,
        $.test_statement,
        $.import_statement,
        $.expression_statement,
        $.variable_definition_statement,
        $.variable_assignment_statement,
        $.return_statement,
        $.class_definition,
        $.interface_definition,
        $.for_in_loop,
        $.while_statement,
        $.break_statement,
        $.continue_statement,
        $.if_statement,
        $.if_let_statement,
        $.struct_definition,
        $.enum_definition,
        $.try_catch_statement,
        $.super_constructor_statement,
        $.throw_statement,
        $.lift_statement
      ),

    return_statement: ($) =>
      seq("return", optional(field("expression", $.expression)), $._semicolon),

    assignment_operator: ($) => choice("=", "+=", "-="),

    variable_assignment_statement: ($) =>
      seq(
        field("name", alias($.reference, $.lvalue)),
        field("operator", $.assignment_operator),
        field("value", $.expression),
        $._semicolon
      ),

    expression_statement: ($) => seq($.expression, $._semicolon),

    variable_definition_statement: ($) =>
      seq(
        "let",
        optional(field("reassignable", $.reassignable)),
        field("name", $.identifier),
        optional($._type_annotation),
        "=",
        field("value", $.expression),
        $._semicolon
      ),

    _type_annotation: ($) => seq(":", field("type", $._type)),

    // Classes

    intrinsic: ($) =>
      prec.right(
        seq(
          field("name", $.intrinsic_identifier),
          optional(field("args", $.argument_list))
        )
      ),
    intrinsic_identifier: ($) => /@[A-Za-z_$0-9]*/,

    // TODO: is there some way to generalize this
    // so we can define other intrinsics or functions that accept types?
    type_intrinsic: ($) => seq(
      "@type",
      "(",
      field("type", $._type),
      ")"
    ),

    // Primitives
    number: ($) => choice($._integer, $._decimal),
    _integer: ($) => /\d[\d_]*/,
    _decimal: ($) => /\d[\d_]*\.\d[\d_]*/,

    bool: ($) => choice("true", "false"),

    duration: ($) =>
      choice(
        $.milliseconds,
        $.seconds,
        $.minutes,
        $.hours,
        $.days,
        $.months,
        $.years
      ),
    milliseconds: ($) => seq(field("value", $.number), "ms"),
    seconds: ($) => seq(field("value", $.number), "s"),
    minutes: ($) => seq(field("value", $.number), "m"),
    hours: ($) => seq(field("value", $.number), "h"),
    days: ($) => seq(field("value", $.number), "d"),
    months: ($) => seq(field("value", $.number), "mo"),
    nil_value: ($) => "nil",
    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $._string_fragment,
            $._escape_sequence,
            $.template_substitution
          )
        ),
        '"'
      ),
    template_substitution: ($) => seq("{", $.expression, "}"),
    _string_fragment: ($) => token.immediate(prec(1, /[^{"\\]+/)),
    _escape_sequence: ($) =>
      token.immediate(
        seq(
          "\\",
          choice(
            "{",
            /[^xu0-7]/,
            /[0-7]{1,3}/,
            /x[0-9a-fA-F]{2}/,
            /u[0-9a-fA-F]{4}/,
            /u\{[0-9a-fA-F]+\}/
          )
        )
      ),

    call: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("caller", choice($.expression, $.super_call)),
          field("args", $.argument_list)
        )
      ),

    argument_list: ($) =>
      seq(
        "(",
        commaSep(choice($.positional_argument, $.keyword_argument)),
        ")"
      ),

    positional_argument: ($) => $.expression,

    new_expression: ($) =>
      prec.right(
        seq(
          "new",
          field("class", choice($.custom_type, $.mutable_container_type)),
          // While "args" is optional in this grammar, upstream parsing will fail if it is not present
          field("args", optional($.argument_list)),
          optional(seq("as", field("id", $.expression))),
          optional(seq("in", field("scope", $.expression)))
        )
      ),

    _type: ($) =>
      choice(
        $.custom_type,
        $.builtin_type,
        $._builtin_container_type,
        $.json_container_type,
        $.function_type,
        $.optional,
        $._parenthesized_type
      ),

    function_type: ($) =>
      prec.right(
        seq(
          optional(field("phase_specifier", $.phase_specifier)),
          field("parameter_types", $.parameter_type_list),
          seq(":", field("return_type", $._type))
        )
      ),

    parameter_type_list: ($) => seq("(", commaSep($._type), ")"),

    builtin_type: ($) =>
      choice(
        "num",
        "bool",
        "any",
        "str",
        "void",
        "duration",
        "datetime",
        "regex",
        "bytes"
      ),

    _return_type: ($) => $._type_annotation,

    parameter_definition: ($) =>
      seq(
        optional(field("reassignable", $.reassignable)),
        optional(field("variadic", $.variadic)),
        field("name", $.identifier),
        optional($._type_annotation)
      ),

    parameter_list: ($) => seq("(", commaSep($.parameter_definition), ")"),

    immutable_container_type: ($) =>
      seq(
        field("collection_type", choice("Array", "Set", "Map", "Promise")),
        $._container_value_type
      ),

    mutable_container_type: ($) =>
      choice(
        seq(
          field("collection_type", choice("MutSet", "MutMap", "MutArray")),
          $._container_value_type
        )
      ),

    _builtin_container_type: ($) =>
      choice($.immutable_container_type, $.mutable_container_type),

    _container_value_type: ($) =>
      seq("<", field("type_parameter", $._type), ">"),

    optional_unwrap: ($) =>
      prec.right(PREC.OPTIONAL_UNWRAP, seq($.expression, "!")),

    unary_expression: ($) => {
      /** @type {Array<[RuleOrLiteral, number]>} */
      const table = [
        // -- is invalid but we'll let the compiler catch it to not mistake it for multiple `-`s
        ["--", PREC.UNARY],
        ["-", PREC.UNARY],
        ["!", PREC.UNARY],
      ];

      return choice(
        ...table.map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(field("op", operator), field("arg", $.expression))
          )
        )
      );
    },

    binary_expression: ($) => {
      /** @type {Array<[RuleOrLiteral, number, "left" | "right"]>} */
      const table = [
        ["+", PREC.ADD, "left"],
        ["-", PREC.ADD, "left"],
        ["*", PREC.MULTIPLY, "left"],
        ["/", PREC.MULTIPLY, "left"],
        ["\\", PREC.MULTIPLY, "left"],
        ["%", PREC.MULTIPLY, "left"],
        ["**", PREC.POWER, "left"],
        ["||", PREC.LOGICAL_OR, "left"],
        ["&&", PREC.LOGICAL_AND, "left"],
        //['|', PREC.INCLUSIVE_OR, "left"],
        //['^', PREC.EXCLUSIVE_OR, "left"],
        //['&', PREC.BITWISE_AND, "left"],
        ["==", PREC.EQUAL, "left"],
        ["!=", PREC.EQUAL, "left"],
        [">", PREC.RELATIONAL, "left"],
        [">=", PREC.RELATIONAL, "left"],
        ["<=", PREC.RELATIONAL, "left"],
        ["<", PREC.RELATIONAL, "left"],
        //['<<', PREC.SHIFT, "left"],
        //['>>', PREC.SHIFT, "left"],
        //['>>>', PREC.SHIFT, "left"],
        ["??", PREC.UNWRAP_OR, "right"],
      ];

      return choice(
        ...table.map(([operator, precedence, associativity]) => {
          const precFn = associativity === "left" ? prec.left : prec.right;
          return precFn(
            precedence,
            seq(
              field("left", $.expression),
              field("op", operator),
              field("right", $.expression)
            )
          );
        })
      );
    },

    closure_modifiers: ($) => choice($.phase_specifier),

    closure: ($) =>
      seq(
        optional(field("modifiers", $.closure_modifiers)),
        field("parameter_list", $.parameter_list),
        optional($._return_type),
        "=>",
        field("block", $.block)
      ),

    parenthesized_expression: ($) => seq("(", $.expression, ")"),

    array_literal: ($) =>
      seq(
        optional(field("type", $._builtin_container_type)),
        bracketed(commaSep(field("element", $.expression)))
      ),
    map_literal: ($) =>
      seq(
        optional(field("type", $._builtin_container_type)),
        braced(commaSep(field("member", $.map_literal_member)))
      ),
    struct_literal: ($) =>
      seq(
        field("type", $.custom_type),
        braced(commaSep(field("fields", $.struct_literal_member)))
      ),

    map_literal_member: ($) => seq($.expression, "=>", $.expression),
    struct_literal_member: ($) =>
      choice($.identifier, seq($.identifier, ":", $.expression)),
    structured_access_expression: ($) =>
      prec.right(
        PREC.STRUCTURED_ACCESS,
        seq($.expression, "[", $.expression, "]")
      ),

    json_literal: ($) =>
      choice(
        seq(
          field("type", $.json_container_type),
          field("element", $.expression)
        ),
        field("element", $.json_map_literal)
      ),

    json_map_literal: ($) =>
      braced(commaSep(field("member", $.json_literal_member))),
